<resources>
    <string name="app_name">Foodie</string>
    <string name="title_post">Post</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="second_view_text">Hee cutie</string>
    <string name="email_hint">  Enter e-mail address...</string>
    <string name="password_hint">  Enter password...</string>
    <string name="login_text">Sign In</string>
    <string name="password_text">Password</string>
    <string name="username_text">Email or username</string>
    <string name="foodie_text">FOODIE</string>
    <string name="login_title">LOGIN</string>
    <string name="facebook_text">LOGIN WITH FACEBOOK</string>
    <string name="google_text">LOGIN WITH GOOGLE</string>
    <string name="register">REGISTER</string>
    <string name="search_title">Search Recipes</string>
    <string name="button_upload">UPLOAD</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_recipe_ph">Title</string>
    <string name="description_recipe_ph">Description</string>
    <string name="photo_recipe_ph">Food</string>
    <string name="like_amount">LIKES</string>
    <string name="comment_amount">COMMENTS</string>
    <string name="null_ph">0</string>
    <string name="save_text">SAVE</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_notification__settings">Notification Settings</string>
    <string name="title_activity_settings2">Settings</string>

</resources>
