<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_post"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings" />

</menu>
