<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B6EFDC"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foodie_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="10"
            android:background="#66AEA0"
            android:contentDescription="@string/foodie_text"
            android:paddingLeft="32dip"
            android:paddingTop="32dip"
            android:paddingRight="32dip"
            android:visibility="visible"
            app:srcCompat="@drawable/foodie_logo_transparent_2"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#66AEA0"
            android:gravity="right"
            android:paddingRight="40dp"
            android:text="@string/login_title"
            android:textColor="#2D2F31"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dp"
                    android:text="@string/username_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/EmailBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/email_hint"
                    android:inputType="text|textEmailAddress"
                    android:paddingLeft="10dip"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dip"
                    android:text="@string/password_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/PasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:lineSpacingExtra="0sp"
                    android:paddingLeft="10dip"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="70dp"
                    android:background="@drawable/rounded_black"
                    android:onClick="login"
                    android:text="@string/login_text" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/rounded_red"
                    android:gravity="center"
                    android:text="@string/google_text"
                    android:textAlignment="center"
                    android:textColor="#FF3030" />

                <TextView
                    android:id="@+id/facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/rounded_blue"
                    android:gravity="center"
                    android:text="@string/facebook_text"
                    android:textAlignment="center"
                    android:textColor="#2196F3" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="register"
                    android:text="@string/register" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>