<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.foodie.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.foodie.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.foodie.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/navigation_post"
        android:name="com.example.foodie.ui.post.PostActivity"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_account" />
</navigation>