<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="404dp"
        android:layout_height="495dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="#6EC595"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/recipe_photo"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#000000"
                android:padding="5dp"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/title_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/side_bars"
                android:padding="5dp"
                android:text="@string/title_recipe_ph" />

            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/side_bars"
                android:padding="5dp"
                android:text="@string/description_recipe_ph" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#787878"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:tint="#00FFFFFF"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/like_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/like_amount" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@android:drawable/stat_notify_chat" />

                <TextView
                    android:id="@+id/comment_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/comment_amount" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/save_text" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@android:drawable/ic_menu_save" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>